<resources>
    <string name="app_name">MyStories</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="rate">Rate</string>
    <string name="your_ratings">Your Ratings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nothing_to_see_here">Nothing to see here!</string>
    <string name="it_might_help_if_you_edit_your_filter">It might help if you edit your filter</string>
    <string name="language_of_your_story">Language of your Story:</string>
    <string name="create">Create</string>
    <string name="back">BACK</string>
    <string name="tell_us_your_story">Tell us your story...</string>
    <string name="save_draft">Save Draft</string>
    <string name="do_yu_want_to_save_draft">Do you want to save your story as a draft?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="load_saved_draft">You have a saved draft. Do you want to load it?</string>
    <string name="load_draft">Load Draft</string>
    <string name="youreachedtheend">Hey! You reached the end :) Why don\'t you create a story of your own?</string>
    <string name="waitingforinternet">Waiting for internet</string>
    <string name="postisstillposting">A post is still in the queue to be posted. Please try again later</string>
    <string name="storycreatedsuccess">Story was created successfully</string>
    <string name="unamenotavailable">Username is not available. Please choose another one</string>
    <string name="pleasechooseusername">Please choose an username!</string>
    <string name="pleasechooselongerpass">Please choose a stronger password!</string>
    <string name="needyourmailerrror">We need your e-mail to secure your account!</string>
    <string name="checkusername">Please check your username!</string>
    <string name="checkmailaddress">Please check your email address!</string>
    <string name="checkpass">Please check your password!</string>
    <string name="agreetotheterms">Please agree to the Terms of use!</string>
    <string name="didnotwork">Oops that did not work :( please try again!</string>
    <string name="notauthenticated">You are not authenticated. Please login again!</string>
    <string name="loginsuccess">Successfully logged in!</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="checkuingusername">Checking username...</string>
    <string name="lostconnection">Lost connection! Check your internet!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="passwordnotmatching">Password does not match!</string>
    <string name="logoutsuccess">Logged out successfully</string>
    <string name="checkemails">Please check your e-mails!</string>
    <string name="delacc">Delete Account</string>
    <string name="thiscannotbeundone">This cannot be undone! Are you sure?</string>
    <string name="sadtoseeyougo">Sad to see you go!</string>
    <string name="accountnolongerexists">This account no longer exists!</string>
    <string name="resetpassask">Reset password?</string>
    <string name="reset">RESET</string>
    <string name="read_privacy_policy">Read Privacy Policy</string>
    <string name="read_terms_of_use">Read Terms of Use</string>
    <string name="receive_newsletters">Receive Newsletters</string>
    <string name="ok">OK</string>
</resources>
