<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.myrating.stories.mystories.CreateStory">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/bgpager1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>


        <android.support.v4.view.ViewPager
            android:id="@+id/bgpager2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>



    </RelativeLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/LinearLayout_root_storyfrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:scaleType="fitCenter"
                    android:src="@drawable/spacer" />


                <EditText
                    android:id="@+id/new_story_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/tell_us_your_story"
                    android:inputType="textMultiLine"
                    android:maxHeight="300dp"
                    android:orientation="horizontal" />


                <TextView
                    android:id="@+id/author_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="Huckleberry Finn"
                    android:textAlignment="textEnd" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/language_of_your_story" />

                <Spinner
                    android:id="@+id/language_chooser"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/spacer" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/create"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:text="@string/create"
                        android:textColor="#ffffff"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:background="#00fffff0"
                        android:text="@string/back"
                        android:textAlignment="textStart"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>
